--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                         </div>
                     </div>
                     <div id="downloadBtn" class="common-button">
-                        <a href="sample.pdf" download="CV.pdf" class="common-btn">Download CV</a>
+                        <a href="CV.pdf" download="CV.pdf" class="common-btn">Download CV</a>
                     </div>
                 </div>
                 <div class="card-boxes-wrapper">
