Spelling correction and CV issue resolve

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                             </g>
                         </g>
                     </svg>
-                    <div class="nav-text">Potfolio</div>
+                    <div class="nav-text">Portfolio</div>
                 </div>
                 <div class="nav-block" data-id="page-4">
                     <svg fill="#fff" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -247,7 +247,7 @@
                         </div>
                     </div>
                     <div id="downloadBtn" class="common-button">
-                        <a href="CV.pdf" download="CV.pdf" class="common-btn">Download CV</a>
+                        <a href="CV.pdf" target="_blank" class="common-btn">Download CV</a>
                     </div>
                 </div>
                 <div class="card-boxes-wrapper">
