Added New project

--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
                     <a target="_blank" href="https://www.gymproluxestore.com/pages/60-day-challenge"
                         class="extra-url">GymProLuxe</a>
                     <a target="_blank" href="https://therapidsweeper.com/" class="extra-url">RapidSweeper</a>
+                    <a target="_blank" href="https://www.origin-biotics.com/products/gut-shield-pro" class="extra-url">Origin Biotics</a>
                 </div>
             </div>
             <div class="outer-container">
